--- a/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.html
@@ -51,8 +51,8 @@
           </div>
                 <img src="https://i.imgur.com/MJdZS0m.png" alt="">
         </div>
-      </section>
-    </ng-template>
+      <!-- </div> -->
+    </div>
+  </div>
+
 </div>
-
-
