--- a/Angular/proyectoFinal/src/app/paginas/teacher-page/teacher-page.component.css
+++ b/Angular/proyectoFinal/src/app/paginas/teacher-page/teacher-page.component.css
@@ -1,253 +1,11 @@
+.form-control{
+    display: inline-flex;
+    width: 30%;
+}
 
-h2{
-    margin-top: 10px;
+.form-control::-webkit-input-placeholder {
     text-align: center;
-    font-weight: 700;
-    font-size: 40px;
-    color:white;
-  }
-
-  .form-group {
-    display: flex;
-    flex-direction: column;
-    margin-top: 50px;
-    margin-left:10% ;
-    margin-right:10% ;
-  }
-
-  .form-control {
-    text-align: center;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    margin:0.5rem auto;
-  }
-
-    input.form-control{
-    width: 50%;
-
-  }
-
-/* botones */
-.neon {
-    width: 50%;
-    height: 60px;
-    background: #30fbd7;
-    border: 10px solid #2be1c1;
-    border-radius: 20px;
-    text-align: center;
-    -webkit-box-shadow: 0px 0px 0px 0px rgba(48,251,214,1);
-    -moz-box-shadow: 0px 0px 0px 0px rgba(48,251,214,1);
-    box-shadow: 0px 0px 0px 0px rgba(48,251,214,1);
-    transition: ease 0.3s;
-    margin: 20px 0;
-    color: rgb(0, 0, 0);
-    font-weight: 600;
-    font-size: 1rem;
-
-  }
-  
-  .neon:hover {
-    color: rgb(0, 0, 0);
-    background: #e92197;
-    border: 10px solid #d11d87;
-    -webkit-box-shadow: 0px 0px 0px 0px rgba(233,33,150,1);
-    -moz-box-shadow: 0px 0px 0px 0px rgba(233,33,150,1);
-    box-shadow: 0px 0px 0px 0px rgba(233,33,150,1);
-    font-weight: 600;
-    font-size: 1rem;
-  }
-  
-  
-  
-  .neon:hover > span {
-    color: #fff;
-    letter-spacing: 0.4em;
-  }
-  
-  .neon span {
-    font-size: 15px;
-    color: #222;
-    text-align: center;
-    line-height: 40px;
-    font-family: 'Nunito', sans-serif !important;
-    font-weight: 300;
-    letter-spacing: 0.2em;
-    transition: ease 0.3s;
-  }
-
-  /* boton neon warning */
-  .neon-warning {
-    width: 40%;
-    height: 60px;
-    background: #e92197;
-    border: 10px solid #d11d87;
-    border-radius: 20px;
-    text-align: center;
-    -webkit-box-shadow: 0px 0px 16px 7px rgba(233,33,150,1);
-    -moz-box-shadow: 0px 0px 16px 7px rgba(233,33,150,1);
-    box-shadow: 0px 0px 16px 7px rgba(233,33,150,1);
-    transition: ease 0.3s;
-    margin: 20px 0;
-    color: white;
-
-  }
-  
-  .neon-warning:hover {
-    background: #30fbd7;
-    border: 10px solid #2be1c1;
-    -webkit-box-shadow: 0px 0px 16px 7px rgba(48,251,214,1);
-    -moz-box-shadow: 0px 0px 16px 7px rgba(48,251,214,1);
-    box-shadow: 0px 0px 16px 7px rgba(48,251,214,1);
-    color: black;
-  }
-  
-  
-  
-  .neon-warning:hover > span {
-    color: #fff;
-    letter-spacing: 0.4em;
-  }
-  
-  .neon-warning span {
-    font-size: 15px;
-    color: #222;
-    text-align: center;
-    line-height: 40px;
-    font-family: 'Nunito', sans-serif !important;
-    font-weight: 300;
-    letter-spacing: 0.2em;
-    transition: ease 0.3s;
-  }
-  .destacados{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    position: relative;
-    }
-    .flex-profile{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .btn-primary{
-        width: 35%;
-    }
-    .btn-primary:hover{
-        background-color: #e92197;
-        border-color: #d11d87;
-    }
-
-    .blurredwallpaper{
-        background: rgba(255,255,255,0.2);
-        -webkit-backdrop-filter: blur(10px);
-        backdrop-filter: blur(10px);
-        border: 1px solid rgba(255,255,255,0.1);
-        
-    }
-
-    /* --------------------------------------------- */
-    .destacados{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
-        position: relative;
-        }
-        
-        .destacados::before{
-            content: 'Rankings';
-            position: absolute;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-weight: 600;
-            font-size: 12em;
-            color: rgba(0, 0, 0, 0.08);
-        }
-    
-        /* CARD RANKINGCITO */
-        .rankingcito{
-          position: relative;
-          width: 45%;
-          height: 200px;
-          margin: 40px 20px;
-          display: flex;
-          justify-content: flex-start;
-          align-items: center;
-          transition: all .5s;
-          background: linear-gradient(45deg, #10214c, #c31c7e);
-        }
-        .rankingcito:hover{
-          -webkit-box-shadow: 0 0 17px 5.5px #e92297;
-          -moz-box-shadow: 0 0 17px 5.5px #e92297;
-          box-shadow: 0 0 17px 5.5px #e92297;
-        }
-    
-      .rankingcito img{
-        position: absolute;
-        top:-50%;
-        left:90%;
-        bottom:0;
-        transform: translate(-50%);
-        height: 350px;
-        z-index: 1;
-        opacity: 0.7;
-    }
-    
-    .rankingcito:hover img{
-        left: 85%;
-        z-index: 2;
-        height: 400px;
-        transition: all .5s;
-        opacity: 1;
-    }
-    .rankingcito .contencito{
-        position: relative;
-        width: 50%;
-        left: 15%;
-        padding: 20px 20px 20px 40px;
-        color: white;
-        opacity: 1;
-        transition: all .5s;
-        margin-left: -2px;
-        text-decoration: none;
-        font-size: 20px;
-        font-weight: 600;
-    }
-    
-    .rankingcito:hover .contencito{
-        left: 0;
-        opacity: 1;
-    }
-    
-    .rankingcito .contencito h2{
-        text-transform: uppercase;
-        font-size: 2.2em;
-        line-height: 1em;
-    }
-    
-    .rankingcito .contencito a{
-        position: relative;
-        background: white;
-        display: inline-block;
-        padding: 10px 20px;
-        margin-top: 10px;
-        font-weight: 700;
-    }
-    .rankingcito .contencito h2{
-      text-transform: uppercase;
-      font-size: 2.2em;
-      line-height: 1em;
-  }
-  
-  .rankingcito .contencito a{
-      position: relative;
-      background: white;
-      display: inline-block;
-      padding: 10px 20px;
-      margin-top: 10px;
-      font-weight: 700;
-  }
+}
+button{
+    margin: 2rem;
+}
