--- a/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.css
+++ b/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.css
@@ -78,149 +78,27 @@
     width: 2rem !important; 
     height: 2rem !important;
   }
+  .limitsContainer{
+    margin: 0 auto;
+    margin-left: 0px;
+  }
+
+ .ranking-container .roboimage img  , svg{
+    /* display: block;
+    margin: 0 auto;
+    width: 30rem !important;
+    height: 21rem !important; */
+  }
+
+  /* .limitsContainer {
+     margin-left: 250px; 
+     background-image: linear-gradient(0deg, #2b2f77 0%, #141852 50%, #070b34 100%) !important; 
+  } */
+
+   .row .col-md-8{
+    margin-left: 15.62rem;
+    margin-top: 5rem;
+  } 
 
   /* content no ranking */
-/* boton */
-  .neon {
-    width: -webkit-fill-available;
-    height: 60px;
-    background: #e92197;
-    border: 10px solid #d11d87;
-    border-radius: 20px;
-    text-align: center;
-    -webkit-box-shadow: 0px 0px 16px 7px rgba(233,33,150,1);
-    -moz-box-shadow: 0px 0px 16px 7px rgba(233,33,150,1);
-    box-shadow: 0px 0px 16px 7px rgba(233,33,150,1);
-    transition: ease 0.3s;
-    margin: 20px 0;
-    color: white;
-
-  }
   
-  .neon:hover {
-    background: #30fbd7;
-    border: 10px solid #2be1c1;
-    -webkit-box-shadow: 0px 0px 16px 7px rgba(48,251,214,1);
-    -moz-box-shadow: 0px 0px 16px 7px rgba(48,251,214,1);
-    box-shadow: 0px 0px 16px 7px rgba(48,251,214,1);
-    color: black;
-  }
-  
-  
-  
-  .neon:hover > span {
-    color: #fff;
-    letter-spacing: 0.4em;
-  }
-  
-  .neon span {
-    font-size: 15px;
-    color: #222;
-    text-align: center;
-    line-height: 40px;
-    font-family: 'Nunito', sans-serif !important;
-    font-weight: 300;
-    letter-spacing: 0.2em;
-    transition: ease 0.3s;
-  }
-
-  .destacados{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    position: relative;
-    }
-    
-    .destacados::before{
-        content: 'Rankings';
-        position: absolute;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-weight: 600;
-        font-size: 12em;
-        color: rgba(0, 0, 0, 0.20);
-    }
-
-    /* CARD RANKINGCITO */
-    .rankingcito{
-      position: relative;
-      width: 45%;
-      height: 200px;
-      margin: 40px 20px;
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      transition: all .5s;
-      background: linear-gradient(45deg, #10214c, #c31c7e);
-    }
-    .rankingcito:hover{
-      -webkit-box-shadow: 0 0 17px 5.5px #e92297;
-      -moz-box-shadow: 0 0 17px 5.5px #e92297;
-      box-shadow: 0 0 17px 5.5px #e92297;
-    }
-
-  .rankingcito img{
-    position: absolute;
-    top:-50%;
-    left:90%;
-    bottom:0;
-    transform: translate(-50%);
-    height: 350px;
-    z-index: 1;
-    opacity: 0.7;
-}
-
-.rankingcito:hover img{
-    left: 85%;
-    z-index: 2;
-    height: 400px;
-    transition: all .5s;
-    opacity: 1;
-}
-.btn{
-  z-index: 1 !important;
-}
-.btn:hover{
-  z-index: 1 !important;
-}
-
-.rankingcito .contencito{
-    position: relative;
-    width: 50%;
-    left: 15%;
-    padding: 20px 20px 20px 40px;
-    color: white;
-    opacity: 1;
-    transition: all .5s;
-    margin-left: -2px;
-}
-
-.rankingcito:hover .contencito{
-    left: 0;
-    opacity: 1;
-}
-
-.rankingcito .contencito h2{
-    text-transform: uppercase;
-    font-size: 2.2em;
-    line-height: 1em;
-}
-
-.rankingcito .contencito a{
-    position: relative;
-    background: white;
-    display: inline-block;
-    padding: 10px 20px;
-    margin-top: 10px;
-    font-weight: 700;
-}
-
-h3{
-  font-size: 2.2em;
-  line-height: 1em;
-}
-
-    
-
