--- a/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.html
@@ -1,55 +1,34 @@
-<div class="containerStudent">
-    <!-- Contenedor de rankings -->
-    <!-- <div class="ranking-container"> -->
-    <!-- Mensaje si el alumno no tiene rankings -->
-    <div class="noRankJoinNew">
-      <div class="noRankingsContainer">
-        <ng-container *ngIf="rankings.length == 0; else rankingList">
-          <h2>¡Ups! 😰</h2><br />
-          <p class="no-rankings-message">
-            <span>{{ mensajeNoRankings }}</span>
-          </p>
-          <!-- <div class="roboimage">
-                <img src="https://i.imgur.com/M7t09Un.png" alt="Imagen de robot">
-              </div> -->
-              <div class="mainimageContainer">
-                <div class="imageContainer">
-                  <img src="https://i.imgur.com/Hx7TLZp.png" alt="">
-                </div>
-              </div>
-        </ng-container>
-      </div>
-
-
-      <!-- Formulario para unirse a un nuevo ranking -->
-      <div class="form-group">
-        <label class="form-label" for="nuevo-codigo-ranking"
-          >Introduce un código de ranking para unirte a uno nuevo:</label
-        >
-        <input
-          class="form-control"
-          type="text"
-          id="nuevo-codigo-ranking"
-          [(ngModel)]="nuevoCodigoRanking"
-        />
-        <button class="neon" (click)="unirseRanking()">
-          Unirse a ranking
-        </button>
-      </div>
-    </div>
-    
-    <!-- </div> -->
-    <!-- Lista de rankings si el alumno tiene al menos uno -->
-    <ng-template #rankingList>
-      <h2 class="rankings-message">Estás matriculado en los siguientes rankings: </h2>
-      <section id="destacados" class="destacados">
-        <!--inicio de cards -->
-        <div class="rankingcito" *ngFor="let ranking of rankings">
-          <div class="contencito">
-            <h3>{{ ranking.name }}</h3>
-            <button (click)="verRanking(ranking.id)" type="button" class="btn btn-outline-info">Ver Ranking</button>
+<div class="container-fluid text-center">
+  <div class="row">
+    <div class="mx-auto col-md-8 ">
+      <!-- Contenedor de rankings -->
+      <!-- <div class="ranking-container"> -->
+        <!-- Mensaje si el alumno no tiene rankings -->
+         <ng-container *ngIf="rankings.length == 0; else rankingList">
+          <div>
+            <p class="no-rankings-message">{{mensajeNoRankings}}</p>
           </div>
-                <img src="https://i.imgur.com/MJdZS0m.png" alt="">
+          <div class="roboimage">
+            <img src="https://i.imgur.com/M7t09Un.png" alt="Imagen de robot">
+          </div>
+        </ng-container> 
+
+        <!-- Lista de rankings si el alumno tiene al menos uno -->
+        <ng-template #rankingList>
+          <p class="rankings-message">{{mensajeRankings}}</p>
+          <ul class="rankings-list">
+            <li *ngFor="let ranking of rankings">
+              <a [routerLink]="['/ranking', ranking.id]">{{ranking.name}}</a>
+            </li>
+          </ul>
+        </ng-template>
+
+        <!-- Formulario para unirse a un nuevo ranking -->
+        <div class="form-group">
+          <label class="form-label" for="nuevo-codigo-ranking">Introduce un código de ranking para unirte a uno
+            nuevo:</label>
+          <input class="form-control" type="text" id="nuevo-codigo-ranking" [(ngModel)]="nuevoCodigoRanking">
+          <button class="btn btn-primary" (click)="unirseRanking()">Unirse a ranking</button>
         </div>
       <!-- </div> -->
     </div>
