--- a/Angular/proyectoFinal/src/app/paginas/profile-student/profile-student.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/profile-student/profile-student.component.html
@@ -57,40 +57,43 @@
         </div>
         <h3>Info de tu perfil</h3>
   
-        <form class="form-horizontal" role="form">
-          <div class="form-group">
-            <label class="col-lg-3 control-label text-center">Nombre:</label>
-            <div class="col-lg-8">
-              <input class="form-control" type="text" [(ngModel)]="student.name">
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Apellido:</label>
-            <div class="col-lg-8">
-              <input class="form-control" type="text" value="Bishop">
-            </div>
-          </div>
   
-          <div class="form-group">
-            <label class="col-lg-3 control-label">Email:</label>
-            <div class="col-lg-8">
-              <input class="form-control" type="text" value="janesemail@gmail.com">
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-md-3 control-label">Username:</label>
-            <div class="col-md-8">
-              <input class="form-control" type="text" value="janeuser">
-            </div>
-          </div>
-          <div class="col-md-8">
-            <div class="buttonsavechanges">
-              <input type="button" class="btn btn-primary" value="Guardar Cambios">
-              <span></span>
-              <input type="reset" class="btn btn-danger" value="Cancelar Cambios">
-            </div>
-          </div>
-        </form>
+<form [formGroup]="studentForm" class="form-horizontal" role="form">
+  <div class="form-group">
+    <label class="col-lg-3 control-label text-center">Nombre:</label>
+    <div class="col-lg-8">
+      <input class="form-control" type="text" name="student.name" formControlName="name">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-lg-3 control-label">Apellido:</label>
+    <div class="col-lg-8">
+      <input class="form-control" type="text" name="student.surnames" formControlName="surnames">
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="col-lg-3 control-label">Email:</label>
+    <div class="col-lg-8">
+      <input class="form-control" type="text"  name="student.email" formControlName="email">
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-md-3 control-label">Username:</label>
+    <div class="col-md-8">
+      <input class="form-control" type="text"  name="student.nickname" formControlName="nickname">
+    </div>
+  </div>
+  <div class="col-md-8">
+    <div class="buttonsavechanges">
+      <input class="btn btn-primary" type="submit" value="Guardar Cambios" (click)="save()">
+      <span></span>
+      <input type="reset" class="btn btn-danger" value="Cancelar Cambios">
+    </div>
+  </div>
+</form>
+
+
       </div>
     </div>
   </div>
