getPracticesDelivered and sweer etc

--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
@@ -40,7 +40,7 @@
 
 
 
-  <button (click)="nuevaTarea = true">Añadir nueva Tarea</button>
+  <button *ngIf="!nuevaTarea" (click)="nuevaTarea = true">Añadir nueva Tarea</button>
 </div>
 
 <div *ngIf="nuevaTarea">
