--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
@@ -79,6 +79,30 @@
   </tbody>
 </table>
 
+<div class="Request">
+  <h2>Solicitudes para unirse a este ranking</h2>
+  <div class="containertablerequest">
+    <table>
+      <thead>
+        <tr>
+          <th>Foto de perfil</th>
+          <th>Nombre alumno</th>
+          <th>Estado</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Circle-icons-profile.svg/512px-Circle-icons-profile.svg.png" alt="profileImg"></td>
+          <td>Arnulfo Perez</td>
+          <td>
+            <button class="btn btn-success">Aceptar al ranking</button>
+            <button class="btn btn-danger">Eliminar solicitud</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
 
 
 <div *ngIf="!rankingAnalises" class="loading-message">Cargando...</div>
