--- a/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.css
+++ b/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.css
@@ -70,7 +70,7 @@ h2{
   margin-top: 2px;
  }
   .rankings-message {
-    font-size: 18px;
+    font-size: 30px;
     font-weight: bold;
     margin-bottom: 10px;
   }
@@ -124,18 +124,25 @@ h2{
     -webkit-box-shadow: 0px 0px 16px 7px rgba(233,33,150,1);
     -moz-box-shadow: 0px 0px 16px 7px rgba(233,33,150,1);
     box-shadow: 0px 0px 16px 7px rgba(233,33,150,1);
-    transition: ease 0.3s;
-    margin: 20px 0;
-    color: white;
-
-  }
-  
-  .neon:hover {
     background: #30fbd7;
     border: 10px solid #2be1c1;
     -webkit-box-shadow: 0px 0px 16px 7px rgba(48,251,214,1);
     -moz-box-shadow: 0px 0px 16px 7px rgba(48,251,214,1);
     box-shadow: 0px 0px 16px 7px rgba(48,251,214,1);
+    transition: ease 0.3s;
+    margin: 20px 0;
+    color: black;
+    font-weight: 700;
+    font-size: 20px;
+
+  }
+  
+  .neon:hover {
+    background: #e92197;
+    border: 10px solid #d11d87;
+    -webkit-box-shadow: 0px 0px 16px 7px rgba(233,33,150,1);
+    -moz-box-shadow: 0px 0px 16px 7px rgba(233,33,150,1);
+    box-shadow: 0px 0px 16px 7px rgba(233,33,150,1);
     color: black;
   }
   
@@ -186,29 +193,36 @@ h2{
       justify-content: flex-start;
       align-items: center;
       transition: all .5s;
-      background: linear-gradient(45deg, #10214c, #c31c7e);
+      /* background: linear-gradient(45deg, #10214c, #c31c7e); */
+      background: #606c88;
+      background: -webkit-linear-gradient(0deg, #606c88 0%, #3f4c6b 100%);
+      background: linear-gradient(0deg, #606c88 0%, #3f4c6b 100%); 
+        
+      
     }
     .rankingcito:hover{
-      -webkit-box-shadow: 0 0 17px 5.5px #e92297;
-      -moz-box-shadow: 0 0 17px 5.5px #e92297;
-      box-shadow: 0 0 17px 5.5px #e92297;
+      -webkit-box-shadow: 0 0 17px 5.5px #c4c2c3;
+      -moz-box-shadow: 0 0 17px 5.5px #e8e5e7;
+      box-shadow: 0 0 17px 5.5px #f5f4f4;
     }
 
   .rankingcito img{
+    /* background-image: url("https://i.imgur.com/M6lHbsV.png"); */
     position: absolute;
-    top:-50%;
+    top:0%;
     left:90%;
     bottom:0;
     transform: translate(-50%);
-    height: 350px;
+    height: 200px;
     z-index: 1;
     opacity: 0.7;
+    transition: all .5s;
 }
 
 .rankingcito:hover img{
     left: 85%;
     z-index: 2;
-    height: 400px;
+    height: 200px;
     transition: all .5s;
     opacity: 1;
 }
