--- a/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/student-page/student-page.component.html
@@ -49,7 +49,7 @@
             <h3>{{ ranking.name }}</h3>
             <button (click)="verRanking(ranking.id)" type="button" class="btn btn-outline-info">Ver Ranking</button>
           </div>
-                <img src="https://i.imgur.com/MJdZS0m.png" alt="">
+                <img [src]="ranking.image" alt="">
         </div>
       </section>
     </ng-template>
