Regenerar codigo ranking

--- a/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
+++ b/Angular/proyectoFinal/src/app/paginas/ranking-page/ranking-page.component.html
@@ -1,6 +1,9 @@
 <div *ngIf="!showPracticasComponent">
   <h2 class="ranking-header">Ranking #{{ rankingName }}</h2>
-  <table *ngIf="student && student.email !== ''" >
+  <div  *ngIf="teacher && teacher.email !== ''">
+    <button (click)="changeCodeRank()">Regenerar Codigo Ranking</button>
+  </div>
+  <table *ngIf="student && student.email !== ''">
     <thead>
       <tr>
         <th>Nombre</th>
@@ -24,99 +27,99 @@
     </tbody>
   </table>
 
-<div *ngIf="teacher && teacher.email !== ''">
-  <ul>
-    <li *ngFor="let practice of practicesDelivered">
-      <span>{{ practice.student_name }}</span>
-      <span>{{ practice.student_surname }}</span>
-      <span>{{ practice.practice_name }}</span>
-    </li>
-  </ul>
+  <div *ngIf="teacher && teacher.email !== ''">
+    <ul>
+      <li *ngFor="let practice of practicesDelivered">
+        <span>{{ practice.student_name }}</span>
+        <span>{{ practice.student_surname }}</span>
+        <span>{{ practice.practice_name }}</span>
+      </li>
+    </ul>
 
 
 
 
-  <button *ngIf="!nuevaTarea" (click)="nuevaTarea = true">Añadir nueva Tarea</button>
-</div>
 
-<div *ngIf="nuevaTarea">
-  <form>
-    <label>Nombre:</label>
-    <input type="text" name="tarea.name" id="tarea.name" [(ngModel)]="tarea.name"><br>
-    <label>Descripción:</label>
-    <textarea name="description" id="description" [(ngModel)]="tarea.description"></textarea><br>
-    <label>Fecha límite:</label>
-    <input type="date" name="deadline_practice" id="deadline_practice" [(ngModel)]="tarea.deadline_practice"><br>
-    <button type="submit" (click)="agregarTarea()">Agregar tarea</button>
-    <button type="button" (click)="nuevaTarea = false">Cancelar</button>
-  </form>
-</div>
-<td *ngIf="student && student.email !== ''">
-<button (click)="verPracticas(student.id)">Ver mis Practicas</button>
-</td>
-<table *ngIf="!nuevaTarea" class="ranking-table">
-  <thead>
-    <tr>
-      <th>Posición</th>
-      <th>Nombre</th>
-      <th>Puntuación</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let analysis of rankingAnalises; let i = index">
-      <td>{{ i + 1 }}</td>
-      <td>{{ analysis.name }}</td>
-      <td>{{ analysis.points }}</td>
-      <td *ngIf="teacher && teacher.email !== ''">
-        <button (click)="eliminarRegistro(analysis.id_rank,analysis.id_student)">Eliminar</button>
-      </td>
-      <td *ngIf="teacher && teacher.email !== ''">
-        <input #newPoints name="new_points" type="number">
-        <button (click)="editarPuntos(analysis.id_rank,analysis.id_student,+newPoints.value)">Editar</button>
-      </td>
-      <td *ngIf="teacher && teacher.email !== ''">
-        <button (click)="verPracticas(analysis.id_student)">Ver Practicas</button>
-      </td>
-    </tr>
-  </tbody>
-</table>
-
-<div class="Request">
-  <h2>Solicitudes para unirse a este ranking</h2>
-  <div class="containertablerequest">
-    <table>
-      <thead>
-        <tr>
-          <th>Foto de perfil</th>
-          <th>Nombre alumno</th>
-          <th>Estado</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Circle-icons-profile.svg/512px-Circle-icons-profile.svg.png" alt="profileImg"></td>
-          <td>Arnulfo Perez</td>
-          <td>
-            <button class="btn btn-success">Aceptar al ranking</button>
-            <button class="btn btn-danger">Eliminar solicitud</button>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <button *ngIf="!nuevaTarea" (click)="nuevaTarea = true">Añadir nueva Tarea</button>
   </div>
-</div>
 
 
-<div *ngIf="!rankingAnalises" class="loading-message">Cargando...</div>
-<div *ngIf="!rankingAnalises" class="error-message">No se encontraron datos del ranking.</div>
+  <div *ngIf="nuevaTarea">
+    <form>
+      <label>Nombre:</label>
+      <input type="text" name="tarea.name" id="tarea.name" [(ngModel)]="tarea.name"><br>
+      <label>Descripción:</label>
+      <textarea name="description" id="description" [(ngModel)]="tarea.description"></textarea><br>
+      <label>Fecha límite:</label>
+      <input type="date" name="deadline_practice" id="deadline_practice" [(ngModel)]="tarea.deadline_practice"><br>
+      <button type="submit" (click)="agregarTarea()">Agregar tarea</button>
+      <button type="button" (click)="nuevaTarea = false">Cancelar</button>
+    </form>
+  </div>
+
+  <td *ngIf="student && student.email !== ''">
+    <button (click)="verPracticas(student.id)">Ver mis Practicas</button>
+  </td>
+  <table *ngIf="!nuevaTarea" class="ranking-table">
+    <thead>
+      <tr>
+        <th>Posición</th>
+        <th>Nombre</th>
+        <th>Puntuación</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let analysis of rankingAnalises; let i = index">
+        <td>{{ i + 1 }}</td>
+        <td>{{ analysis.name }}</td>
+        <td>{{ analysis.points }}</td>
+        <td *ngIf="teacher && teacher.email !== ''">
+          <button (click)="eliminarRegistro(analysis.id_rank,analysis.id_student)">Eliminar</button>
+        </td>
+        <td *ngIf="teacher && teacher.email !== ''">
+          <input #newPoints name="new_points" type="number">
+          <button (click)="editarPuntos(analysis.id_rank,analysis.id_student,+newPoints.value)">Editar</button>
+        </td>
+        <td *ngIf="teacher && teacher.email !== ''">
+          <button (click)="verPracticas(analysis.id_student)">Ver Practicas</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+  <div class="Request">
+    <h2>Solicitudes para unirse a este ranking</h2>
+    <div class="containertablerequest">
+      <table>
+        <thead>
+          <tr>
+            <th>Foto de perfil</th>
+            <th>Nombre alumno</th>
+            <th>Estado</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><img
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Circle-icons-profile.svg/512px-Circle-icons-profile.svg.png"
+                alt="profileImg"></td>
+            <td>Arnulfo Perez</td>
+            <td>
+              <button class="btn btn-success">Aceptar al ranking</button>
+              <button class="btn btn-danger">Eliminar solicitud</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+
+  <div *ngIf="!rankingAnalises" class="loading-message">Cargando...</div>
+  <div *ngIf="!rankingAnalises" class="error-message">No se encontraron datos del ranking.</div>
 </div>
 
 <div *ngIf="showPracticasComponent">
-  <app-practicas
-  *ngIf="showPracticasComponent"
-  [rankingId]="rankingId"
-  [practicasDelivered]="practicesDelivered"
-  (onPracticeSelected)="verPracticas($event)"
-  (goBack)="showPracticasComponent = false"
-></app-practicas>
+  <app-practicas *ngIf="showPracticasComponent" [rankingId]="rankingId" [practicasDelivered]="practicesDelivered"
+    (onPracticeSelected)="verPracticas($event)" (goBack)="showPracticasComponent = false"></app-practicas>
 </div>
